policies/components/other/disallow-pod-template-hash/disallow-pod-template-hash.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ibm-disallow-pod-template-hash
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
    policies.kyverno.io/title: Disallow Pod Template Hash
    policies.kyverno.io/category: IBM - Other
    policies.kyverno.io/subject: Pod,Deployment,StatefulSet
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      Prevent pod-template-hash from being manually added to deployment objects to prevent a
      runaway condition in replicasets and pods.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: restrict-pod-template-hash
      match:
        any:
          - resources:
              kinds:
                - Deployment
                - StatefulSet
                - DaemonSet
              namespaceSelector:
                matchExpressions:
                  - key: ibm.com/kyverno
                    operator: Exists
      validate:
        message: Cannot add pod-template-hash manually.
        pattern:
          spec:
            selector:
              matchLabels:
                X(pod-template-hash): "*?"
